--- a/_config.yml
+++ b/_config.yml
@@ -9,14 +9,14 @@ theme: jekyll-theme-chirpy
 lang: en
 
 # Change to your timezone › https://kevinnovak.github.io/Time-Zone-Picker
-timezone:
+timezone: Asia/Tokyo
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy # the main title
+title: Ender∙Jones # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the subtitle
+tagline: CS doctoral student at TUIS University, Japan.  # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
   A minimal, responsive and feature-rich Jekyll theme for technical writing.
@@ -26,52 +26,52 @@ description: >- # used by seo meta and the atom feed
 url: "Ender-Jones.github.io"
 
 github:
-  username: github_username # change to your GitHub username
+  username: Ender-Jones # change to your GitHub username
 
 twitter:
-  username: twitter_username # change to your Twitter username
+  username: EnderJones1872 # change to your Twitter username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@domain.com # change to your email address
+  name: Ender∙Jones
+  email: enderjones1872@gmail.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username # change to your Twitter homepage
-    - https://github.com/username # change to your GitHub homepage
+    - https://x.com/EnderJones1872 # change to your Twitter homepage
+    - https://github.com/Ender-Jones # change to your GitHub homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
 
-# Site Verification Settings
-webmaster_verifications:
-  google: # fill in your Google verification code
-  bing: # fill in your Bing verification code
-  alexa: # fill in your Alexa verification code
-  yandex: # fill in your Yandex verification code
-  baidu: # fill in your Baidu verification code
-  facebook: # fill in your Facebook verification code
+# # Site Verification Settings
+# webmaster_verifications:
+#   google: # fill in your Google verification code
+#   bing: # fill in your Bing verification code
+#   alexa: # fill in your Alexa verification code
+#   yandex: # fill in your Yandex verification code
+#   baidu: # fill in your Baidu verification code
+#   facebook: # fill in your Facebook verification code
 
 # ↑ --------------------------
 # The end of `jekyll-seo-tag` settings
 
-# Web Analytics Settings
-analytics:
-  google:
-    id: # fill in your Google Analytics ID
-  goatcounter:
-    id: # fill in your GoatCounter ID
-  umami:
-    id: # fill in your Umami ID
-    domain: # fill in your Umami domain
-  matomo:
-    id: # fill in your Matomo ID
-    domain: # fill in your Matomo domain
-  cloudflare:
-    id: # fill in your Cloudflare Web Analytics token
-  fathom:
-    id: # fill in your Fathom Site ID
+# # Web Analytics Settings
+# analytics:
+#   google:
+#     id: # fill in your Google Analytics ID
+#   goatcounter:
+#     id: # fill in your GoatCounter ID
+#   umami:
+#     id: # fill in your Umami ID
+#     domain: # fill in your Umami domain
+#   matomo:
+#     id: # fill in your Matomo ID
+#     domain: # fill in your Matomo domain
+#   cloudflare:
+#     id: # fill in your Cloudflare Web Analytics token
+#   fathom:
+#     id: # fill in your Fathom Site ID
 
 # Page views settings
 pageviews:
@@ -88,7 +88,7 @@ pageviews:
 #     light — Use the light color scheme
 #     dark — Use the dark color scheme
 #
-theme_mode: # [light | dark]
+theme_mode: dark
 
 # The CDN endpoint for media resources.
 # Notice that once it is assigned, the CDN url
@@ -98,11 +98,11 @@ theme_mode: # [light | dark]
 cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: ang.JPG
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
-social_preview_image: # string, local or CORS resources
+social_preview_image:  # string, local or CORS resources
 
 # boolean type, the global switch for TOC in posts.
 toc: true
