--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ description: >- # used by seo meta and the atom feed
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
-url: "Ender-Jones.github.io"
+url: "https://Ender-Jones.github.io"
 
 github:
   username: Ender-Jones # change to your GitHub username
